--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -8,5 +8,23 @@
 
     <body>
         <h1>Hello World!</h1>
+        <h4>By:Tyler Herron</h4>
+        <p>Hi this is my <strong><em>FIRST</em></strong> HTML project</p>
+
+        <p>i <strong>hope </strong>you <em>like </iem>it</p>
+
+        <p>Test paragrapgh 1</p>
+        <p>Test paragrapgh 2</p>
+        <ul>
+            <li>1</il>
+            <li>2</il>
+            <li>3</il>
+        </ul>
+        <h2>Things I like</h2>
+        <ol>
+            <li>food</li>
+            <li>Sleep</li>
+            <li>video games</li>
+        </ol>
     </body>
 </html>
