--- a/html-boilerplate/Lists.html
+++ b/html-boilerplate/Lists.html
@@ -18,6 +18,7 @@
         <li>laundry</li>
         <li>Shower</li>
         <li>Sleep</li>
+        <li>Eat Breakfast</li>
     </ol>
 </body>
 </html>
